--- a/MBlogApp/MBlogApp/Views/RegisterPage.xaml
+++ b/MBlogApp/MBlogApp/Views/RegisterPage.xaml
@@ -4,9 +4,17 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewmodel="clr-namespace:MBlogApp.ViewModels"
+             xmlns:local="clr-namespace:MBlogApp.Converters"
              mc:Ignorable="d"
              x:Class="MBlogApp.Views.RegisterPage"
              NavigationPage.HasNavigationBar="False">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <local:MultiTriggerConverter x:Key="dataHasBeenEntered" />
+            <local:PasswordTriggerConverter x:Key="dataHasPassword" />
+
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <ContentPage.BindingContext>
         <viewmodel:RegisterPageViewModel/>
     </ContentPage.BindingContext>
@@ -21,7 +29,7 @@
                        HeightRequest="120"
                        WidthRequest="120"
                    />
-                <Label Text="ErrorEmailMessage" 
+                <Label Text="{Binding RegisterModel.ErrorMessage}" 
                    TextColor="Red"
                    Margin="40,0"
                    IsVisible="False"/>
@@ -29,8 +37,12 @@
                     <StackLayout Orientation="Vertical">
                         <Label Text="EMAIL"
                             Margin="10,0"/>
-                        <Entry  IsPassword="False"
-                             Margin="10,0"/>
+                        <Entry  
+                             x:Name="EntryEmail"
+                             IsPassword="False"
+                             Margin="10,0"
+                            Text="{Binding RegisterModel.Email}"
+                             ReturnType="Next"/>
                     </StackLayout>
                 </Frame>
                 <Label Text="ErrorPasswordMessage" 
@@ -41,8 +53,12 @@
                     <StackLayout Orientation="Vertical" Spacing="0">
                         <Label Text="PASSWORD" 
                            Margin="10,0"/>
-                        <Entry  IsPassword="True"
-                             Margin="10,0"/>
+                        <Entry 
+                             x:Name="EntryPassword"
+                             IsPassword="True"
+                             Margin="10,0"
+                            Text="{Binding RegisterModel.PassWord}" 
+                                ReturnType="Next"/>
                     </StackLayout>
                 </Frame>
                 <Label Text="ErrorConfirmPasswordMessage" 
@@ -53,14 +69,40 @@
                     <StackLayout Orientation="Vertical" Spacing="0">
                         <Label Text="CONFIRM PASSWORD" 
                            Margin="10,0"/>
-                        <Entry  IsPassword="True"
-                             Margin="10,0"/>
+                        <Entry  
+                             x:Name="EntryConfirmPassword"
+                            IsPassword="True"
+                             Margin="10,0"
+                             Text="{Binding RegisterModel.ConfirmPassWord}" 
+                                ReturnType="Done"/>
                     </StackLayout>
                 </Frame>
                 <Button Text="REGISTER" 
                     HeightRequest="65"
                     Margin="40,20,40,5"
-                    />
+                        IsEnabled="False"
+                    >
+                    <Button.Triggers>
+                        <MultiTrigger TargetType="Button">
+                            <MultiTrigger.Conditions>
+                                <BindingCondition Binding="{Binding Source={x:Reference EntryEmail},
+                              Path=Text.Length,
+                              Converter={StaticResource dataHasBeenEntered}}"
+                          Value="true" />
+                                <BindingCondition Binding="{Binding Source={x:Reference EntryPassword},
+                              Path=Text.Length,
+                              Converter={StaticResource dataHasPassword}}"
+                          Value="true" />
+                                <BindingCondition Binding="{Binding Source={x:Reference EntryConfirmPassword},
+                              Path=Text.Length,
+                              Converter={StaticResource dataHasPassword}}"
+                          Value="true" />
+                            </MultiTrigger.Conditions>
+                            <Setter Property="IsEnabled" Value="True" />
+                            <Setter Property="BackgroundColor" Value="{StaticResource P_PimaryMainColor}"/>
+                        </MultiTrigger>
+                    </Button.Triggers>
+                </Button>
 
                 <Label Text="LOG IN"                  
                     HorizontalOptions="CenterAndExpand"
