--- a/MBlogApp/MBlogApp/Views/ForgotPasswordPage.xaml
+++ b/MBlogApp/MBlogApp/Views/ForgotPasswordPage.xaml
@@ -4,9 +4,17 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewmodel="clr-namespace:MBlogApp.ViewModels"
+             xmlns:local="clr-namespace:MBlogApp.Converters"
              mc:Ignorable="d"
              x:Class="MBlogApp.Views.ForgotPasswordPage"
              NavigationPage.HasNavigationBar="False">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <local:MultiTriggerConverter x:Key="dataHasBeenEntered" />
+            <local:PasswordTriggerConverter x:Key="dataHasPassword" />
+
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <ContentPage.BindingContext>
         <viewmodel:ForgotPasswordPageViewModel/>
     </ContentPage.BindingContext>
@@ -15,9 +23,7 @@
             <StackLayout>
                 <StackLayout HeightRequest="100"
                     />
-                <Image x:Name="Img_Logo" Source="key_ic.png" 
-
-                   
+                <Image x:Name="Img_Logo" Source="key_ic.png"                   
                    />
                 <Label Text="FORGOT YOUR PASSWORD?"               
                     HorizontalOptions="CenterAndExpand"
@@ -36,16 +42,80 @@
                    IsVisible="False"/>
                 <Frame>
                     <StackLayout Orientation="Vertical">
-                        <Entry  Placeholder="Enter your email"
-                                FontSize="24"
+                        <Entry  
+                            x:Name="EntryEmail"
+                            Placeholder="Enter your email"
+                              FontSize="24"
+                             Text="{Binding Email}"
                              Margin="10,0"/>
                     </StackLayout>
                 </Frame>
-                <Button Text="SEND PASSWORD" 
+                <Button x:Name="btnSend"
+                    Text="SEND PASSWORD" 
                     HeightRequest="65"
                     Margin="40,20,40,5"
-                        Command="{Binding SendEmailCommand}"
-                    />
+                        
+                    IsEnabled="{Binding Source={x:Reference EntryEmail},
+                                    Path=Text.Length,
+                                    Converter={StaticResource dataHasBeenEntered}}"
+                                     Command="{Binding SendEmailCommand}"
+                    >
+                    <Button.Triggers>
+                        <DataTrigger TargetType="Button"
+                     Binding="{Binding Source={x:Reference btnSend},
+                                       Path=IsEnabled}"
+                     Value="True">
+                            <Setter Property="BackgroundColor" Value="{StaticResource P_PimaryMainColor}"/>
+                        </DataTrigger>
+                    </Button.Triggers>
+                    <!--<Button.Triggers>-->
+                        <!--<DataTrigger TargetType="Button"
+                     Binding="{Binding Source={x:Reference EntryEmail},
+                                       Path=Text.Length}"
+                            Converter="{StaticResource dataHasBeenEntered}"
+                          Value="true">
+                            <Setter Property="IsEnabled" Value="True" />
+                            <Setter Property="BackgroundColor" Value="{StaticResource P_PimaryMainColor}"/>
+                        </DataTrigger>-->
+                        <!--<MultiTrigger TargetType="Button">
+                            <MultiTrigger.Conditions>
+                                <BindingCondition Binding="{Binding Source={x:Reference EntryEmail},
+                              Path=Text.Length,
+                              Converter={StaticResource dataHasBeenEntered}}"
+                              Value="True" />
+                                <BindingCondition Binding="{Binding Source={x:Reference EntryEmail},
+                              Path=Text.Length,
+                              Converter={StaticResource dataHasBeenEntered}}"
+                              Value="True" />
+
+                            </MultiTrigger.Conditions>
+                            <Setter Property="IsEnabled" Value="True" />
+                            <Setter Property="BackgroundColor" Value="{StaticResource P_PimaryMainColor}"/>
+                        </MultiTrigger>-->
+                        <!--<Binding Source="{x:Reference EntryEmail}"
+                             Path=Text.Length>
+                            <Binding.Converter>
+                                <local:MultiTriggerConverter x:TypeArguments="Style">
+                                    <local:MultiTriggerConverter>
+                                        <Style TargetType="Label">
+                                            <Setter Property="Text" Value="Indubitably!" />
+                                            <Setter Property="FontAttributes" Value="Italic, Bold" />
+                                            <Setter Property="TextColor" Value="Green" />
+                                        </Style>
+                                    </local:MultiTriggerConverter>
+
+                                    <local:BoolToObjectConverter.FalseObject>
+                                        <Style TargetType="Label">
+                                            <Setter Property="Text" Value="Maybe later" />
+                                            <Setter Property="FontAttributes" Value="None" />
+                                            <Setter Property="TextColor" Value="Red" />
+                                        </Style>
+                                    </local:BoolToObjectConverter.FalseObject>
+                                </local:MultiTriggerConverter>
+                            </Binding.Converter>
+                        </Binding>
+                    </Button.Triggers>-->
+                </Button>
 
                 <Label Text="LOG IN"               
                     HorizontalOptions="CenterAndExpand"
