--- a/MBlogApp/MBlogApp/Views/ForgotPasswordPage.xaml
+++ b/MBlogApp/MBlogApp/Views/ForgotPasswordPage.xaml
@@ -10,7 +10,7 @@
              NavigationPage.HasNavigationBar="False">
     <ContentPage.Resources>
         <ResourceDictionary>
-            <local:MultiTriggerConverter x:Key="dataHasBeenEntered" />
+            <local:EmailTriggerConverter x:Key="dataHasBeenEntered" />
             <local:PasswordTriggerConverter x:Key="dataHasPassword" />
 
         </ResourceDictionary>
@@ -54,11 +54,11 @@
                     Text="SEND PASSWORD" 
                     HeightRequest="65"
                     Margin="40,20,40,5"
+                    Command="{Binding SendEmailCommand}"
                         
                     IsEnabled="{Binding Source={x:Reference EntryEmail},
-                                    Path=Text.Length,
-                                    Converter={StaticResource dataHasBeenEntered}}"
-                                     Command="{Binding SendEmailCommand}"
+                                    Path=Text,
+                                    Converter={StaticResource dataHasBeenEntered},ConverterParameter=22222}"                                    
                     >
                     <Button.Triggers>
                         <DataTrigger TargetType="Button"
