--- a/MBlogApp/MBlogApp/Views/LogInPage.xaml
+++ b/MBlogApp/MBlogApp/Views/LogInPage.xaml
@@ -11,7 +11,7 @@
             >
     <ContentPage.Resources>
         <ResourceDictionary>
-            <local:MultiTriggerConverter x:Key="dataHasBeenEntered" />
+            <local:EmailTriggerConverter x:Key="dataHasBeenEntered" />
             <local:PasswordTriggerConverter x:Key="dataHasPassword" />
             
         </ResourceDictionary>
@@ -68,7 +68,7 @@
                         <MultiTrigger TargetType="Button">
                             <MultiTrigger.Conditions>
                                 <BindingCondition Binding="{Binding Source={x:Reference EntryEmail},
-                              Path=Text.Length,
+                              Path=Text,
                               Converter={StaticResource dataHasBeenEntered}}"
                           Value="true" />
                                 <BindingCondition Binding="{Binding Source={x:Reference EntryPassword},
