--- a/MBlogApp/MBlogApp/Views/ForgotPasswordPage.xaml
+++ b/MBlogApp/MBlogApp/Views/ForgotPasswordPage.xaml
@@ -12,7 +12,7 @@
         <ResourceDictionary>
             <local:EmailTriggerConverter x:Key="dataHasBeenEntered" />
             <local:PasswordTriggerConverter x:Key="dataHasPassword" />
-
+            <local:ErrorTriggerConverter x:Key="dataHasError" />
         </ResourceDictionary>
     </ContentPage.Resources>
     <ContentPage.BindingContext>
@@ -36,10 +36,14 @@
                     HorizontalTextAlignment="Center"
                        Margin="40,0,40,60"
                      MaxLines="2"/>
-                <Label Text="ErrorEmailMessage" 
-                   TextColor="Red"
+                <Label 
+                     x:Name="LbErrorMessage"
+                    TextColor="{StaticResource P_RedColor}"
                    Margin="40,0"
-                   IsVisible="False"/>
+                     Text="{Binding ErrorMessage}"
+                   IsVisible="{Binding Source={x:Reference LbErrorMessage},
+                                    Path=Text,
+                                    Converter={StaticResource dataHasError}}"/>
                 <Frame>
                     <StackLayout Orientation="Vertical">
                         <Entry  
