Add Validate Input

--- a/MBlogApp/MBlogApp/Views/ForgotPasswordCompletePage.xaml
+++ b/MBlogApp/MBlogApp/Views/ForgotPasswordCompletePage.xaml
@@ -17,10 +17,10 @@
                     />
                 <Image x:Name="Img_Logo" Source="checked_ic.png"                   
                    />
-                <Label Text="FORGOT YOUR PASSWORD?"               
+                <Label Text="COMPLETE"               
                     HorizontalOptions="CenterAndExpand"
                    FontSize="Large"/>
-                <Label Text="No worries. Enter your email and we will send your a reset"               
+                <Label Text="We send password to your email."               
                     HorizontalOptions="CenterAndExpand"
                    FontSize="Medium"
                        FontAttributes="None"
@@ -36,7 +36,7 @@
                         BackgroundColor="{StaticResource P_WhiteColor}"
                         BorderColor="{StaticResource P_PimaryMainColor}"
                         BorderWidth="1.5"
-                        Command="{Binding BackPageCommand}"
+                        Command="{Binding LogInCommand}"
                         />
             </StackLayout>
         </ScrollView>
