--- a/MBlogApp/MBlogApp/Views/ForgotPasswordPage.xaml
+++ b/MBlogApp/MBlogApp/Views/ForgotPasswordPage.xaml
@@ -5,6 +5,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewmodel="clr-namespace:MBlogApp.ViewModels"
              xmlns:local="clr-namespace:MBlogApp.Converters"
+             xmlns:forms="clr-namespace:Lottie.Forms;assembly=Lottie.Forms"
              mc:Ignorable="d"
              x:Class="MBlogApp.Views.ForgotPasswordPage"
              NavigationPage.HasNavigationBar="False">
@@ -20,10 +21,12 @@
     </ContentPage.BindingContext>
     <ContentPage.Content>
         <ScrollView>
+            <Grid>
             <StackLayout>
                 <StackLayout HeightRequest="100"
                     />
-                <Image x:Name="Img_Logo" Source="key_ic.png"                   
+                <Image x:Name="Img_Logo" Source="key_ic.png" 
+                       Margin="0,0,0,20"
                    />
                 <Label Text="FORGOT YOUR PASSWORD?"               
                     HorizontalOptions="CenterAndExpand"
@@ -44,14 +47,18 @@
                    IsVisible="{Binding Source={x:Reference LbErrorMessage},
                                     Path=Text,
                                     Converter={StaticResource dataHasError}}"/>
-                <Frame>
+                <Frame x:Name="fEmail">
                     <StackLayout Orientation="Vertical">
                         <Entry  
                             x:Name="EntryEmail"
                             Placeholder="Enter your email"
                               FontSize="24"
                              Text="{Binding Email}"
-                             Margin="10,0"/>
+                             Margin="10,0"
+                             HeightRequest="65"
+                            Focused="EntryEmail_Focused"
+                            Unfocused="EntryEmail_Unfocused"
+                            />
                     </StackLayout>
                 </Frame>
                 <Button x:Name="btnSend"
@@ -62,7 +69,7 @@
                         
                     IsEnabled="{Binding Source={x:Reference EntryEmail},
                                     Path=Text,
-                                    Converter={StaticResource dataHasBeenEntered},ConverterParameter=22222}"                                    
+                                    Converter={StaticResource dataHasBeenEntered}}"                                    
                     >
                     <Button.Triggers>
                         <DataTrigger TargetType="Button"
@@ -72,53 +79,7 @@
                             <Setter Property="BackgroundColor" Value="{StaticResource P_PimaryMainColor}"/>
                         </DataTrigger>
                     </Button.Triggers>
-                    <!--<Button.Triggers>-->
-                        <!--<DataTrigger TargetType="Button"
-                     Binding="{Binding Source={x:Reference EntryEmail},
-                                       Path=Text.Length}"
-                            Converter="{StaticResource dataHasBeenEntered}"
-                          Value="true">
-                            <Setter Property="IsEnabled" Value="True" />
-                            <Setter Property="BackgroundColor" Value="{StaticResource P_PimaryMainColor}"/>
-                        </DataTrigger>-->
-                        <!--<MultiTrigger TargetType="Button">
-                            <MultiTrigger.Conditions>
-                                <BindingCondition Binding="{Binding Source={x:Reference EntryEmail},
-                              Path=Text.Length,
-                              Converter={StaticResource dataHasBeenEntered}}"
-                              Value="True" />
-                                <BindingCondition Binding="{Binding Source={x:Reference EntryEmail},
-                              Path=Text.Length,
-                              Converter={StaticResource dataHasBeenEntered}}"
-                              Value="True" />
-
-                            </MultiTrigger.Conditions>
-                            <Setter Property="IsEnabled" Value="True" />
-                            <Setter Property="BackgroundColor" Value="{StaticResource P_PimaryMainColor}"/>
-                        </MultiTrigger>-->
-                        <!--<Binding Source="{x:Reference EntryEmail}"
-                             Path=Text.Length>
-                            <Binding.Converter>
-                                <local:MultiTriggerConverter x:TypeArguments="Style">
-                                    <local:MultiTriggerConverter>
-                                        <Style TargetType="Label">
-                                            <Setter Property="Text" Value="Indubitably!" />
-                                            <Setter Property="FontAttributes" Value="Italic, Bold" />
-                                            <Setter Property="TextColor" Value="Green" />
-                                        </Style>
-                                    </local:MultiTriggerConverter>
-
-                                    <local:BoolToObjectConverter.FalseObject>
-                                        <Style TargetType="Label">
-                                            <Setter Property="Text" Value="Maybe later" />
-                                            <Setter Property="FontAttributes" Value="None" />
-                                            <Setter Property="TextColor" Value="Red" />
-                                        </Style>
-                                    </local:BoolToObjectConverter.FalseObject>
-                                </local:MultiTriggerConverter>
-                            </Binding.Converter>
-                        </Binding>
-                    </Button.Triggers>-->
+                 
                 </Button>
 
                 <Label Text="LOG IN"               
@@ -132,6 +93,16 @@
                     </Label.GestureRecognizers>
                 </Label>
             </StackLayout>
+                <StackLayout BackgroundColor="LightGray" Opacity="0.8" IsVisible="{Binding Loading}">
+                <forms:AnimationView 
+	                    x:Name="animationView" 
+	                    Animation="loadingdot2.json" 
+	                    Loop="True"
+	                    AutoPlay="True"
+	                    VerticalOptions="CenterAndExpand" 
+	                    HorizontalOptions="CenterAndExpand" />
+            </StackLayout>
+            </Grid>
         </ScrollView>
     </ContentPage.Content>
 </ContentPage>
