--- a/MBlogApp/MBlogApp/Views/RegisterPage.xaml
+++ b/MBlogApp/MBlogApp/Views/RegisterPage.xaml
@@ -5,6 +5,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewmodel="clr-namespace:MBlogApp.ViewModels"
              xmlns:local="clr-namespace:MBlogApp.Converters"
+             xmlns:forms="clr-namespace:Lottie.Forms;assembly=Lottie.Forms"
              mc:Ignorable="d"
              x:Class="MBlogApp.Views.RegisterPage"
              NavigationPage.HasNavigationBar="False">
@@ -20,6 +21,7 @@
     </ContentPage.BindingContext>
     <ContentPage.Content>
         <ScrollView>
+            <Grid>
             <StackLayout>
                 <StackLayout HeightRequest="50"
                     />
@@ -37,7 +39,7 @@
                    IsVisible="{Binding Source={x:Reference LbErrorMessage},
                                     Path=Text,
                                     Converter={StaticResource dataHasError}}"/>
-                <Frame>
+                <Frame x:Name="fEmail">
                     <StackLayout Orientation="Vertical">
                         <Label Text="EMAIL"
                             Margin="10,0"/>
@@ -46,14 +48,16 @@
                              IsPassword="False"
                              Margin="10,0"
                             Text="{Binding Email}"
-                             ReturnType="Next"/>
+                             ReturnType="Next"
+                            Focused="EntryEmail_Focused"
+                            Unfocused="EntryEmail_Unfocused"/>
                     </StackLayout>
                 </Frame>
                 <Label Text="ErrorPasswordMessage" 
                    TextColor="Red"
                     Margin="40,0"
                    IsVisible="False"/>
-                <Frame>
+                    <Frame x:Name="fPassword">
                     <StackLayout Orientation="Vertical" Spacing="0">
                         <Label Text="PASSWORD" 
                            Margin="10,0"/>
@@ -62,14 +66,16 @@
                              IsPassword="True"
                              Margin="10,0"
                             Text="{Binding Password}" 
-                                ReturnType="Next"/>
+                                ReturnType="Next"
+                            Focused="EntryPassword_Focused"
+                            Unfocused="EntryPassword_Unfocused"/>
                     </StackLayout>
                 </Frame>
                 <Label Text="ErrorConfirmPasswordMessage" 
                    TextColor="Red"
                     Margin="40,0"
                    IsVisible="False"/>
-                <Frame>
+                    <Frame x:Name="fConfirm">
                     <StackLayout Orientation="Vertical" Spacing="0">
                         <Label Text="CONFIRM PASSWORD" 
                            Margin="10,0"/>
@@ -78,7 +84,9 @@
                             IsPassword="True"
                              Margin="10,0"
                              Text="{Binding ConfirmPassword}" 
-                                ReturnType="Done"/>
+                                ReturnType="Done"
+                            Focused="EntryConfirmPassword_Focused"
+                            Unfocused="EntryConfirmPassword_Unfocused"/>
                     </StackLayout>
                 </Frame>
                 <Button Text="REGISTER" 
@@ -120,6 +128,16 @@
                     </Label.GestureRecognizers>
                 </Label>
             </StackLayout>
+                <StackLayout BackgroundColor="LightGray" Opacity="0.8" IsVisible="{Binding Loading}">
+                <forms:AnimationView 
+	                    x:Name="animationView" 
+	                    Animation="loadingdot2.json" 
+	                    Loop="True"
+	                    AutoPlay="True"
+	                    VerticalOptions="CenterAndExpand" 
+	                    HorizontalOptions="CenterAndExpand" />
+            </StackLayout>
+            </Grid>
         </ScrollView>
     </ContentPage.Content>
 </ContentPage>
